# seagrep

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.bench.yml  release-plz.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  fuzz.yml  release-assets.yml  release-plz.yml  release.yml  security.yml
benches/: baseline.json
crates/cli/: Cargo.toml
crates/cli/src/: discover.rs  globs.rs  index.rs  json.rs  main.rs  patterns.rs  printer.rs  progress.rs  scope.rs
crates/cli/tests/: cli.rs  live_index.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  codec.rs  detect.rs  grams.rs  grep.rs  lib.rs  pattern.rs  store.rs  testutil.rs
crates/core/src/codec/: tabular.rs
crates/index/: Cargo.toml
crates/index/benches/: hot_paths.rs
crates/index/benches/fixtures/: sample.txt
crates/index/src/: build.rs  candidate.rs  delta_blocks.rs  eval.rs  format.rs  lib.rs  pack.rs  postings_table.rs  remote_terms.rs  search.rs  segment.rs  sparse_table.rs  terms.rs
crates/index/src/search/: mod.rs  verify.rs
crates/index/src/segment/: cache.rs  compact.rs
crates/index/tests/: common.rs  corrupt_postings_repro.rs  differential.rs  differential_store.rs  segmented.rs  sparse_remote.rs  tombstone_loop_verify.rs  tombstone_repro.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/s3/: Cargo.toml
crates/s3/src/: cache.rs  client.rs  creds.rs  fetch.rs  lib.rs
crates/s3/src/client/: download.rs  upload.rs
crates/s3/tests/: live_s3.rs
crates/sigv4/: Cargo.toml
crates/sigv4/src/: lib.rs
crates/xbench/: Cargo.toml  README.md
crates/xbench/runs/: latest.json  minio.json  s3.json
crates/xbench/scenarios/: prose.toml
crates/xbench/src/: churn.rs  gen.rs  main.rs  scenarios.rs
docs/superpowers/notes/: 2026-06-01-termdict-measurement.md
docs/superpowers/plans/: 2026-06-02-holys3-dict-bakeoff.md  2026-06-02-holys3-stage3b.md  2026-06-03-holys3-ossify.md  2026-06-03-holys3-stage4-concurrency.md  2026-06-04-holys3-benchmarks.md  2026-07-10-index-performance.md  2026-07-10-launch-hardening.md  2026-07-10-logical-documents-formats.md  2026-07-10-s3-transport-cache.md  2026-07-11-continuous-indexing.md  2026-07-20-multi-pattern-regional-search.md
docs/superpowers/specs/: 2026-06-01-holys3-design.md  2026-07-10-holys3-engine-expansion-design.md  2026-07-10-seagrep-engine-expansion-design.md  2026-07-11-continuous-indexing-design.md  2026-07-20-multi-pattern-regional-search-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_source.rs
fuzz/seeds/decode_source/: gz  plain  tar  utf16  zip  zstd
scripts/rg-parity/: run.py
skills/seagrep/: SKILL.md
