[workspace]
resolver = "2"
members = ["crates/core", "crates/query", "crates/index", "crates/sigv4", "crates/s3", "crates/cli", "crates/xbench"]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
description = "Indexed regex search for local files and private S3 buckets"
repository = "https://github.com/holys3/holys3"
homepage = "https://github.com/holys3/holys3"
documentation = "https://docs.rs/holys3"
authors = ["holys3 contributors"]
keywords = ["s3", "grep", "regex", "search", "trigram"]
categories = ["command-line-utilities", "text-processing", "filesystem"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
postcard = { version = "1", features = ["use-std"] }
regex = "1"
regex-syntax = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
tokio = { version = "1", features = ["full"] }
quick-xml = "0.36"
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
doc_markdown = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
todo = "warn"
inefficient_to_string = "warn"
