[package]
name = "holys3"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Indexed regex search for local files and private S3 buckets"
keywords = ["s3", "grep", "regex", "search", "trigram"]
categories = ["command-line-utilities", "text-processing", "filesystem"]
readme = "../../README.md"

[[bin]]
name = "holys3"
path = "src/main.rs"

[dependencies]
holys3-core = { path = "../core", version = "0.1.0" }
holys3-index = { path = "../index", version = "0.1.0" }
holys3-s3 = { path = "../s3", version = "0.1.0" }
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
holys3-sigv4 = { path = "../sigv4", version = "0.1.0" }
tempfile = "3.27.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
