[package]
name = "holys3"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Indexed regex search for local files and private S3 buckets"
keywords = ["s3", "grep", "regex", "search", "trigram"]
categories = ["command-line-utilities", "text-processing", "filesystem"]
readme = "../../README.md"

[[bin]]
name = "holys3"
path = "src/main.rs"

[dependencies]
holys3-core = { path = "../core", version = "0.4.0" }
holys3-index = { path = "../index", version = "0.4.0" }
holys3-s3 = { path = "../s3", version = "0.4.0" }
anyhow.workspace = true
base64 = "0.22.1"
globset = "0.4.18"
mimalloc = "0.1.52"
clap.workspace = true
regex.workspace = true
regex-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
termcolor = "1.4.1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.2.2"
holys3-core = { path = "../core", version = "0.4.0", features = ["testutil"] }
predicates = "3.1.4"
tempfile = "3.27.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
