[package]
name = "holys3-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
regex.workspace = true
rapidhash = "4.4.1"

[features]
testutil = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
