[package]
name = "holys3-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
regex.workspace = true
rapidhash = "4.4.1"
memchr = "2.8.1"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
zstd = "0.13.3"

[features]
testutil = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
