[package]
name = "holys3-index"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
holys3-core = { path = "../core" }
holys3-query = { path = "../query" }
anyhow.workspace = true
serde.workspace = true
postcard.workspace = true
regex.workspace = true
fst = "0.4.7"
memmap2 = "0.9.10"
rayon = "1.12.0"

[dev-dependencies]
holys3-core = { path = "../core", features = ["testutil"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "hot_paths"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
