[package]
name = "holys3-index"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
holys3-core = { path = "../core", version = "0.5.0" }
holys3-query = { path = "../query", version = "0.5.0" }
anyhow.workspace = true
serde.workspace = true
postcard.workspace = true
regex.workspace = true
fst = "0.4.7"
rayon = "1.12.0"
sha2.workspace = true
tempfile.workspace = true
radsort.workspace = true
rapidhash.workspace = true
blake3.workspace = true
bytes.workspace = true
memmap2.workspace = true

[dev-dependencies]
holys3-core = { path = "../core", version = "0.5.0", features = ["testutil"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }

[[bench]]
name = "hot_paths"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
