[package]
name = "holys3-query"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
holys3-core = { path = "../core" }
anyhow.workspace = true
regex.workspace = true
regex-syntax.workspace = true

[lints]
workspace = true
