[package]
name = "holys3-s3"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
holys3-core = { path = "../core", version = "0.1.0" }
holys3-sigv4 = { path = "../sigv4", version = "0.1.0" }
anyhow.workspace = true
futures = "0.3.32"
rand = "0.10.1"
reqwest.workspace = true
tokio.workspace = true
quick-xml.workspace = true
time = { version = "0.3", features = ["formatting"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
