[package]
name = "holys3-s3"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
holys3-core = { path = "../core", version = "0.5.0" }
holys3-sigv4 = { path = "../sigv4", version = "0.5.0" }
anyhow.workspace = true
futures = "0.3.32"
rand = "0.10.1"
reqwest.workspace = true
tokio.workspace = true
quick-xml.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["formatting"] }
bytes.workspace = true
percent-encoding.workspace = true
blake3.workspace = true
fs4.workspace = true
tempfile.workspace = true

[dev-dependencies]
holys3-core = { path = "../core", version = "0.5.0", features = ["testutil"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
