[package]
name = "holys3-s3"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
holys3-core = { path = "../core", version = "0.6.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
anyhow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
futures = "0.3.32"
rand = "0.10.1"
tokio.workspace = true
bytes.workspace = true
percent-encoding.workspace = true
blake3.workspace = true
fs4.workspace = true
tempfile.workspace = true
url.workspace = true

[dev-dependencies]
holys3-core = { path = "../core", version = "0.6.0", features = ["testutil"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
