[package]
name = "holys3-sigv4"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[lints]
workspace = true
