[package]
name = "holys3-sigv4"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
hmac.workspace = true
sha2.workspace = true
sha1 = "0.10.6"
hex.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["parsing"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
